syntax = "proto3";

import "core/core.proto";
import "plato/generic.proto";
import "plato/object.proto";
import "buf/validate/validate.proto";

package plato;

option go_package = "plato/api/proto";

service PlatoAnswerService {
  rpc GetAnswerById(AnswerIdRequest) returns (AnswerResponse) {}
  rpc GetDetailAnswerById(AnswerIdRequest) returns (DetailAnswerResponse) {}
  rpc ListAnswersByTopicId(TopicIdRequest) returns (ListAnswersResponse) {}
  rpc ListDetailAnswersByTopicId(TopicIdRequest) returns (ListDetailAnswersResponse) {}
  rpc InsertAnswer(InsertAnswerRequest) returns (AnswerResponse) {}
  rpc UpdateAnswer(UpdateAnswerRequest) returns (AnswerResponse) {}
  rpc DeleteAnswer(AnswerIdRequest) returns (GenericResponse) {}

  rpc SearchAnswers(SearchAnswersRequest) returns (ListAnswersResponse) {} // Player
}

message SearchAnswersRequest {
  BaseRequest   base = 1;
  string query = 2 [(buf.validate.field).string.min_len = 1, (buf.validate.field).string.max_len = 100];

  uint64 topic_id = 3;
  uint64 mode_id = 4;
}

message ListAnswersResponse {
  BaseResponse   base = 1;
  repeated Answer answers = 2;
}

message ListDetailAnswersResponse {
  BaseResponse   base = 1;
  repeated DetailAnswer detail_answers = 2;
}

message AnswerResponse {
  BaseResponse base = 1;
  Answer answer = 2;
}

message DetailAnswerResponse {
  BaseResponse base = 1;
  DetailAnswer detail_answer = 2;
}

message InsertAnswerRequest{
  BaseRequest base = 1 [(buf.validate.field).required = true];
  string name= 2;
  string icon_url = 3;

  uint64 topic_id = 4;
}

message UpdateAnswerRequest{
  BaseRequest base = 1 [(buf.validate.field).required = true];
  optional string name= 2;
  optional string icon_url = 3;

  uint64 answer_id = 4;
}
